Scrollbar fix (#1622)
* Scroll working and code clenaed up

* Added scroll to tree and added preffix sjpp to class

* Fixed styling

* Fixed horizontal scrolling and generalized styling, to be used without setting a class

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1139,8 +1139,11 @@ h2 {
 .sjpp_table_header {
     font-family: 'Arial';
     font-size: 1em;
-    opacity: 0.5;
     text-align: left;
+    position: sticky;
+    top: 0;
+    opacity: 0.5;
+
 }
 
 .sjpp_table_item {
@@ -1149,6 +1152,27 @@ h2 {
     text-align: left;
     overflow: hidden;
     text-overflow: ellipsis;
+
+}
+
+
+::-webkit-scrollbar{
+    background-color: white;
+    border-radius: 10px;
+    width: 20px;
+}
+
+/* This will handle the thumb (scrolling part) */
+::-webkit-scrollbar-thumb{
+    background-color: grey;
+    border-radius: 10px;
+    border: 5px solid white;
+
+}
+
+.sjpp_hide_scrollbar::-webkit-scrollbar-thumb:vertical{
+    height: 20px!important;
+    width: 20px;
 }
 
 
